--- a/src/main/features/offer/views/settled.njk
+++ b/src/main/features/offer/views/settled.njk
@@ -44,7 +44,7 @@
       {% include "includes/service_survey_link.njk" %}
 
       <p>
-        <a href="{{ DashboardPaths.dashboardPage.uri }}">{{ t('Back to your account') }}</a>
+        <a href="{{ DashboardPaths.dashboardPage.uri }}" class="button">{{ t('Go to your account') }}</a>
       </p>
 
       {{ supportWidget() }}
