--- a/src/main/features/response/views/confirmation/part-admission.njk
+++ b/src/main/features/response/views/confirmation/part-admission.njk
@@ -19,4 +19,5 @@
   {% endif %}
 
   <p>{{ t('We’ve also sent them your explanation of why you do not believe you owe the amount claimed.') }}</p>
+  <p>{{ t('We’ll email you to tell you their response. If they don’t respond within 6 months, the claim will be put on hold.') }}</p>
 {% endif %}
