--- a/src/main/features/claimant-response/views/counter-offer-accepted.njk
+++ b/src/main/features/claimant-response/views/counter-offer-accepted.njk
@@ -12,8 +12,8 @@
 
         {% if isCourtOrderPaymentPlanConvertedByDefendantFrequency %}
           <p> {{ t('The court has accepted your repayment amount, but the frequency will be set by the defendant.
-          We’ve converted the {{ claimantAmount }} {{ claimantFrequency }} payment to
-          {{ courtOrderAmount }} {{ courtOrderFrequency }} payments.', {
+          We’ve converted the {{ claimantAmount }} payment {{ claimantFrequency }} to
+          {{ courtOrderAmount }} {{ courtOrderFrequency }}.', {
               claimantAmount: claimantPaymentPlan.instalmentAmount | numeral,
               claimantFrequency: claimantPaymentPlan.frequency | renderFrequencyViewType | lower,
               courtOrderAmount: courtOrderPaymentPlan.instalmentAmount | numeral,
