--- a/src/main/features/response/views/confirmation/full-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/full-admission-steps.njk
@@ -4,34 +4,67 @@
 {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
 
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-  <p>{{ t('When {{ claimantName }} gets your payment they should tell you and the court you’ve paid.', { claimantName: claimantName }) }}</p>
+  <p>{{ t('You need to make sure that:') }}</p>
+
+  <ul class="list list-bullet">
+    <li>{{ t('they get the money by {{ paymentDate }} - they can request a County Court Judgment against you if not', { paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</li>
+    <li>{{ t('any cheques or bank transfers are clear in their account by the deadline') }}</li>
+    <li>{{ t('you get a receipt for any payments') }}</li>
+    <li>{{ t('they tell the court that you’ve paid') }}</li>
+  </ul>
+
+  <p>
+    {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
+    {{ t('if you need their payment details.') }}
+  </p>
 {% endif %}
 
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
-  <p>
-    {{ t('If {{ claimantName }} accepts your offer to pay, you need to ', { claimantName: claimantName }) }}
-    {{ internalLink('contact them for payment details', claimantDetailsPageURI) }} 
-    {{ t('and to arrange payment.') }}
-  </p>
-
-  <p>{{ t('If they reject your offer to pay by a set date then the court will decide how you must pay.') }}</p>
-
-  <p>{{ t('If they do not respond within 6 months, the court will put the claim on hold.') }}</p>
-{% endif %}
-
-{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+  <h3 class="bold">{{ t('If {{ claimantName }} accepts your offer', { claimantName: claimantName }) }}</h3>
   <p>{{ t('You should:') }}</p>
 
   <ul class="list list-bullet">
-    <li>{{ t('set up your repayment plan to begin when you said it would') }}</li>
+    <li>{{ t('pay {{ claimantName }} by {{ paymentDate }}', { claimantName: claimantName, paymentDate: claim.response.paymentIntention.paymentDate | date }) }}</li>
+    <li>{{ t('make sure any cheques or bank transfers are clear in their account by the deadline') }}</li>
     <li>
-      {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }} 
+      {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
       {{ t('if you need their payment details.') }}
     </li>
     <li>{{ t('make sure you get a receipt for any payments') }}</li>
   </ul>
 
-  <p>{{ t('If they reject your offer to pay in instalments then the court will decide how you can pay.') }}</p>
+  <p>{{ t('Because you’ve said you won’t pay immediately, {{ claimantName }} can either:', { claimantName: claimantName }) }}</p>
 
-  <p>{{ t('If they do not respond within 6 months, the court will put the claim on hold.') }}</p>
+  <ul class="list list-bullet">
+    <li>{{ t('ask you to sign a settlement agreement to formalise the repayment plan') }}</li>
+    <li>{{ t('request a County Court Judgment against you') }}</li>
+  </ul>
+
+  <h3 class="bold">{{ t('If {{ claimantName }} rejects your offer', { claimantName: claimantName }) }}</h3>
+  <p>{{ t('The court will decide how you must pay.') }}</p>
+
+{% endif %}
+
+{% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
+  <h3 class="bold">{{ t('If {{ claimantName }} accepts your offer', { claimantName: claimantName }) }}</h3>
+  <p>{{ t('You should:') }}</p>
+
+  <ul class="list list-bullet">
+    <li>{{ t('set up your repayment plan to begin when you said it would') }}</li>
+    <li>
+      {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
+      {{ t('if you need their payment details.') }}
+    </li>
+    <li>{{ t('make sure you get a receipt for any payments') }}</li>
+  </ul>
+
+  <p>{{ t('Because you’ve said you won’t pay immediately, {{ claimantName }} can either:', { claimantName: claimantName }) }}</p>
+
+  <ul class="list list-bullet">
+    <li>{{ t('ask you to sign a settlement agreement to formalise the repayment plan') }}</li>
+    <li>{{ t('request a County Court Judgment against you') }}</li>
+  </ul>
+
+  <h3 class="bold">{{ t('If {{ claimantName }} rejects your offer', { claimantName: claimantName }) }}</h3>
+  <p>{{ t('The court will decide how you must pay.') }}</p>
 {% endif %}
