ROC:4296 - Part Admit instalments fixes

--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -2,18 +2,19 @@
 {% set claimantName = claim.claimData.claimant.name %}
 {% set amount = claim.response.amount | numeral %}
 {% set fullAmount = claim.totalAmountTillToday | numeral %}
-{% set paymentDate = claim.response.paymentIntention.paymentDate | date %}
 {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
 
-
-
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+  {% set paymentDate = claim.response.paymentIntention.paymentDate | date %}
   <h3 class="heading-small">{{ t('If {{ claimantName }} accepts your offer', { claimantName: claimantName }) }}</h3>
   <p>{{ t('You should:') }}</p>
   <ul class="list list-bullet">
     <li>{{ t('pay {{ claimantName }} by {{ paymentDate }}', { claimantName: claimantName, paymentDate: paymentDate }) }}</li>
     <li>{{ t('make sure any cheques or bank transfers are clear in their account by the deadline') }}</li>
-    <li>{{ internalLink('contact them', claimantDetailsPageURI) }} if you need their payment details</li>
+    <li>
+        {{ internalLink('contact them', claimantDetailsPageURI) }}
+        {{ t('if you need their payment details') }}
+    </li>
     <li>make sure you get a receipt for your payment</li>
   </ul>
   <p>{{t('Because you’ve said you won’t pay immediately, {{ claimantName }} can either:', { claimantName:claimantName }) }}</p>
@@ -31,7 +32,7 @@
 {% endif %}
 
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.IMMEDIATELY %}
-
+  {% set paymentDate = claim.response.paymentIntention.paymentDate | date %}
   <p>{{ t('You need to pay {{ claimantName }} {{amount}} immediately.', { claimantName: claimantName, amount: amount }) }}</p>
 
   <p>{{ t('Make sure that:') }}</p>
@@ -47,40 +48,43 @@
     {{ t('if you need their payment details.') }}
   </p>
 
-  <h3 class="heading-small">{{ t('If {{ claimantName }} accepts your offer of {{amount}}', { claimantName:claimantName, amount: amount }) }}</h3>
+  <h3 class="heading-small">{{ t('If {{ claimantName }} accepts your offer of {{amount}}', { claimantName: claimantName, amount: amount }) }}</h3>
   <p>The claim will be settled.</p>
 
   <h3 class="heading-small">{{ t('If {{ claimantName }} rejects your offer', { claimantName: claimantName } ) }}</h3>
 
-  <p>{{ t('The court will review the case for the full amount of {{fullAmount}}.', { fullAmount:fullAmount }) }}</p>
+  <p>{{ t('The court will review the case for the full amount of {{fullAmount}}.', { fullAmount: fullAmount }) }}</p>
 
 {% endif %}
 
 {% if claim.response.paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS %}
-<h3 class="bold">{{ t('If {{ claimantName }} accepts your offer', { claimantName: claimantName }) }}</h3>
-<p>{{ t('You should:') }}</p>
 
-<ul class="list list-bullet">
-  <li>{{ t('set up your repayment plan to begin when you said it would') }}</li>
-  <li>
-    {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
-    {{ t('if you need their payment details.') }}
-  </li>
-  <li>{{ t('make sure you get a receipt for any payments') }}</li>
-</ul>
+  <h3 class="bold">{{ t('If {{ claimantName }} accepts your offer', { claimantName: claimantName }) }}</h3>
+  <p>{{ t('You should:') }}</p>
 
-<p>{{ t('Because you’ve said you won’t pay immediately, {{ claimantName }} can either:', { claimantName: claimantName }) }}</p>
+  <ul class="list list-bullet">
+    <li>{{ t('set up your repayment plan to begin when you said it would') }}</li>
+    <li>
+      {{ internalLink('Contact ' + claimantName, claimantDetailsPageURI) }}
+      {{ t('if you need their payment details.') }}
+    </li>
+    <li>{{ t('make sure you get a receipt for any payments') }}</li>
+  </ul>
 
-<ul class="list list-bullet">
-  <li>{{ t('ask you to sign a settlement agreement to formalise the repayment plan') }}</li>
-  <li>{{ t('request a County Court Judgment against you for {{ amount }}', { amount: amount }) }}</li>
-</ul>
+  <p>{{ t('Because you’ve said you won’t pay immediately, {{ claimantName }} can either:', { claimantName: claimantName }) }}</p>
 
-<h3 class="bold">{{ t('If {{ claimantName }} rejects that you only owe {{ amount }}', { claimantName: claimantName, amount: amount }) }}</h3>
-<p>{{ t('The court will review the case for the full amount of {{ fullAmount }}', { fullAmount:fullAmount }) }}.</p>
-<h3 class="bold">{{ t('If {{ claimantName }} rejects rejects your offer to pay in instalments', { claimantName: claimantName }) }}</h3>
-<p>{{ t('The court will decide how you must pay.') }}</p>
+  <ul class="list list-bullet">
+    <li>{{ t('ask you to sign a settlement agreement to formalise the repayment plan') }}</li>
+    <li>{{ t('request a County Court Judgment against you for {{ amount }}', { amount: amount }) }}</li>
+  </ul>
 
+  <h3 class="bold">{{ t('If {{ claimantName }} rejects that you only owe {{ amount }}', { claimantName: claimantName, amount: amount }) }}</h3>
+
+  <p>{{ t('The court will review the case for the full amount of {{ fullAmount }}.', { fullAmount: fullAmount }) }}</p>
+
+  <h3 class="bold">{{ t('If {{ claimantName }} rejects rejects your offer to pay in instalments', { claimantName: claimantName }) }}</h3>
+
+  <p>{{ t('The court will decide how you must pay.') }}</p>
 
 {% endif %}
 
