--- a/src/main/features/claimant-response/views/check-and-send.njk
+++ b/src/main/features/claimant-response/views/check-and-send.njk
@@ -11,73 +11,118 @@
 
     {{ tableStart('yourResponse', 'Your response') }}
 
-    {% if draft.settleAdmitted %}
-      {% if draft.settleAdmitted.admitted.option === 'yes' %}
-        {% set settleAdmittedResponse = 'I accept this amount' %}
-      {% else %}
-        {% set settleAdmittedResponse = 'I reject this amount' %}
+    {% if alreadyPaid %}
+
+      {% if draft.partPaymentReceived %}
+        {% if draft.partPaymentReceived.received.option === 'yes' %}
+          {% set paymentReceivedResponse = 'Yes' %}
+        {% else %}
+          {% set paymentReceivedResponse = 'No' %}
+        {% endif %}
+
+        {{ row(label = 'Do you agree the defendant has paid ' + draft.paidAmount.amount | numeral + '?', bold = true, value = paymentReceivedResponse,
+          changeLink = StatesPaidPaths.partPaymentReceivedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+      {% endif %}
+
+      {% if draft.accepted %}
+        {% if draft.accepted.accepted.option === 'yes' %}
+          {% set paymentAcceptedResponse = 'Yes' %}
+        {% else %}
+          {% set paymentAcceptedResponse = 'No' %}
+        {% endif %}
+
+        {% if draft.partPaymentReceived %}
+          {% set paymentAcceptedText = 'Do you want to settle the claim for the ' + draft.paidAmount.amount | numeral + '?' %}
+        {% else %}
+          {% set paymentAcceptedText = 'Do you agree the defendant has paid ' + draft.paidAmount.amount | numeral + '?'  %}
+        {% endif %}
+        {{ row(label = paymentAcceptedText, bold = true, value = paymentAcceptedResponse,
+          changeLink = StatesPaidPaths.settleClaimPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+      {% endif %}
+
+      {% if draft.rejectionReason %}
+        {{ row(label = 'Reason for rejecting their response', bold = true, value = draft.rejectionReason.text,
+          changeLink = ClaimantResponsePaths.rejectionReasonPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+      {% endif %}
+
+      {% if draft.freeMediation %}
+        {% if draft.freeMediation.option === 'yes' %}
+          {% set freeMediationResponse = 'Yes' %}
+        {% else %}
+          {% set freeMediationResponse = 'No' %}
+        {% endif %}
+
+        {{ row(label = 'Will you try free mediation?', bold = true, value = freeMediationResponse,
+          changeLink = ClaimantResponsePaths.freeMediationPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+      {% endif %}
+    {% else %}
+      {% if draft.settleAdmitted %}
+        {% if draft.settleAdmitted.admitted.option === 'yes' %}
+          {% set settleAdmittedResponse = 'I accept this amount' %}
+        {% else %}
+          {% set settleAdmittedResponse = 'I reject this amount' %}
           {% if draft.freeMediation.option === 'yes' %}
             {% set freeMediationResponse =  'Yes' %}
           {% else %}
             {% set freeMediationResponse = 'No' %}
           {% endif %}
-      {% endif %}
-
-      {{ row(label = 'Do you accept or reject the defendant’s admission?', bold = true, value = settleAdmittedResponse,
-        changeLink = ClaimantResponsePaths.settleAdmittedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
-      {% if draft.settleAdmitted.admitted.option === 'no' and claim.response.freeMediation === 'yes' %}
-        {{ row(label = 'Will you try free mediation?', bold = true, value = freeMediationResponse,
-          changeLink = ClaimantResponsePaths.freeMediationPage.evaluateUri({ externalId: draft.externalId }), bottomBorder = true) }}
-      {% endif %}
-    {% endif %}
-
-    {% if draft.acceptPaymentMethod %}
-      {% if draft.acceptPaymentMethod.accept.option === 'yes' %}
-        {% set acceptPaymentMethodResponse = 'I accept this repayment plan' %}
-      {% else %}
-        {% set acceptPaymentMethodResponse = 'I reject this repayment plan' %}
-      {% endif %}
-
-      {{ row(label = 'Do you accept the defendant’s repayment plan?', bold = true, value = acceptPaymentMethodResponse,
-        changeLink = ClaimantResponsePaths.acceptPaymentMethodPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
-
-      {% if draft.acceptPaymentMethod.accept.option === 'no' %}
-        {% if draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.IMMEDIATELY.value %}
-          {% set alternatePaymentMethodResponse = t('Immediately') %}
-        {% elseif draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.BY_SPECIFIED_DATE.value %}
-          {% set alternatePaymentMethodResponse = t('In full by {{ deadline }}', { deadline: draft.alternatePaymentMethod.paymentDate.date.toMoment() | date }) %}
-        {% elseif draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.INSTALMENTS.value %}
-          {% set alternatePaymentMethodResponse = t('By instalments') %}
         {% endif %}
 
-        {{ row(label = 'How would you like the defendant to pay?', bold = true, value = alternatePaymentMethodResponse,
-          changeLink = ClaimantResponsePaths.alternateRepaymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+        {{ row(label = 'Do you accept or reject the defendant’s admission?', bold = true, value = settleAdmittedResponse,
+          changeLink = ClaimantResponsePaths.settleAdmittedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+        {% if draft.settleAdmitted.admitted.option === 'no' and claim.response.freeMediation === 'yes' %}
+          {{ row(label = 'Will you try free mediation?', bold = true, value = freeMediationResponse,
+            changeLink = ClaimantResponsePaths.freeMediationPage.evaluateUri({ externalId: draft.externalId }), bottomBorder = true) }}
+        {% endif %}
+      {% endif %}
 
-        {% if draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.INSTALMENTS.value %}
-          {{ row(label = 'Regular payments of', bold = true, value = draft.alternatePaymentMethod.paymentPlan.instalmentAmount | numeral,
-            changeLink = ClaimantResponsePaths.paymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false) }}
-          {{ row(label = 'Frequency of payments', bold = true, value = draft.alternatePaymentMethod.paymentPlan.paymentSchedule.displayValue,
-            bottomBorder = false) }}
-          {{ row(label = 'Date for first instalment', bold = true, value = draft.alternatePaymentMethod.paymentPlan.firstPaymentDate.toMoment() | date,
-            bottomBorder = true) }}
+      {% if draft.acceptPaymentMethod %}
+        {% if draft.acceptPaymentMethod.accept.option === 'yes' %}
+          {% set acceptPaymentMethodResponse = 'I accept this repayment plan' %}
+        {% else %}
+          {% set acceptPaymentMethodResponse = 'I reject this repayment plan' %}
+        {% endif %}
+
+        {{ row(label = 'Do you accept the defendant’s repayment plan?', bold = true, value = acceptPaymentMethodResponse,
+          changeLink = ClaimantResponsePaths.acceptPaymentMethodPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+
+        {% if draft.acceptPaymentMethod.accept.option === 'no' %}
+          {% if draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.IMMEDIATELY.value %}
+            {% set alternatePaymentMethodResponse = t('Immediately') %}
+          {% elseif draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.BY_SPECIFIED_DATE.value %}
+            {% set alternatePaymentMethodResponse = t('In full by {{ deadline }}', { deadline: draft.alternatePaymentMethod.paymentDate.date.toMoment() | date }) %}
+          {% elseif draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.INSTALMENTS.value %}
+            {% set alternatePaymentMethodResponse = t('By instalments') %}
+          {% endif %}
+
+          {{ row(label = 'How would you like the defendant to pay?', bold = true, value = alternatePaymentMethodResponse,
+            changeLink = ClaimantResponsePaths.alternateRepaymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true) }}
+
+          {% if draft.alternatePaymentMethod.paymentOption.option.value === PaymentType.INSTALMENTS.value %}
+            {{ row(label = 'Regular payments of', bold = true, value = draft.alternatePaymentMethod.paymentPlan.instalmentAmount | numeral,
+              changeLink = ClaimantResponsePaths.paymentPlanPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = false) }}
+            {{ row(label = 'Frequency of payments', bold = true, value = draft.alternatePaymentMethod.paymentPlan.paymentSchedule.displayValue,
+              bottomBorder = false) }}
+            {{ row(label = 'Date for first instalment', bold = true, value = draft.alternatePaymentMethod.paymentPlan.firstPaymentDate.toMoment() | date,
+              bottomBorder = true) }}
+          {% endif %}
         {% endif %}
       {% endif %}
     {% endif %}
-
     {{ tableEnd() }}
 
     {% if draft.formaliseRepaymentPlan %}
       {{ tableStart('howYouWantToProceed', 'How you wish to proceed') }}
-        {{ row(
-          label = 'How do you want to formalise the repayment plan?',
-          bold = true,
-          value = draft.formaliseRepaymentPlan.option | renderFormaliseRepaymentPlanOption,
-          changeLink = ClaimantResponsePaths.chooseHowToProceedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true
-        ) }}
+      {{ row(
+        label = 'How do you want to formalise the repayment plan?',
+        bold = true,
+        value = draft.formaliseRepaymentPlan.option | renderFormaliseRepaymentPlanOption,
+        changeLink = ClaimantResponsePaths.chooseHowToProceedPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = true
+      ) }}
       {{ tableEnd() }}
     {% endif %}
 
-    {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
+    {% if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.SIGN_SETTLEMENT_AGREEMENT.value %}
       {{ tableStart('settlementAgreement', 'Settlement agreement') }}
 
       {% if claim.response.paymentIntention.paymentDate %}
@@ -113,17 +158,17 @@
       {{ tableEnd() }}
     {% endif %}
 
-    {%  if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT.value %}
+    {% if draft.formaliseRepaymentPlan.option.value === FormaliseRepaymentPlanOption.REQUEST_COUNTY_COURT_JUDGEMENT.value %}
       {{ tableStart('judgmentRequest', 'Judgment request') }}
 
-        {{ row('Has the defendant paid some of the amount owed?',
+      {{ row('Has the defendant paid some of the amount owed?',
         draft.paidAmount.option.value | capitalize, changeLink = ClaimantResponseCCJPath.paidAmountPage.evaluateUri({ externalId: claim.externalId }), bottomBorder = not draft.paidAmount.amount, bold = true) }}
 
-        {% if draft.paidAmount.amount %}
-          {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = true, bold = true) }}
-        {% endif %}
+      {% if draft.paidAmount.amount %}
+        {{ row('Amount already paid', draft.paidAmount.amount | numeral, bottomBorder = true, bold = true) }}
+      {% endif %}
 
-        {{ row('Total to be paid by defendant', (claim.totalAmountTillToday - (draft.paidAmount.amount or 0)) | numeral,bold = true) }}
+      {{ row('Total to be paid by defendant', (claim.totalAmountTillToday - (draft.paidAmount.amount or 0)) | numeral,bold = true) }}
 
       {{ tableEnd() }}
     {% endif %}
