--- a/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
@@ -17,26 +17,34 @@
 {% endmacro %}
 
 {% macro ccjRequestedForDefendantDashboard(claim) %}
-  {{ t('The claimant has requested a County Court Judgment (CCJ) against you on {{ ccjRequestedAt }}.',
-    { ccjRequestedAt: claim.countyCourtJudgmentRequestedAt | date }) }}
+  {{ t('{{ claimantName }} has requested a County Court Judgment against you.',
+    { claimantName : claim.claimData.claimant.name }) }}
 {% endmacro %}
 
 {% macro ccjRequestedForDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('The claimant has requested a CCJ against you') }}</h2>
+  <h2 class="heading-small">{{ t('{{ claimantName }} has requested a County Court Judgment against you',
+      { claimantName: claim.claimData.claimant.name }) }}</h2>
   <p>
-    {{ t('You didn’t respond to this claim by the deadline of {{ responseDeadline }}.',
-      { responseDeadline: claim.responseDeadline | date }) }}
+    {{ t('{{ claimantName }} accepted your repayment plan but requested a CCJ against you.',
+      { claimantName: claim.claimData.claimant.name }) }}
   </p>
+  <p>{{ t('If a defendant doesn’t pay immediately, claimants can request a CCJ even if they accept a repayment plan.') }}</p>
+
+  <h2 class="heading-small">{{ t('How to pay') }}</h2>
   <p>
-    {{ t('{{ claimantName }} requested a default County Court Judgment (CCJ) against you on {{ ccjRequestedAt }}. '
-      + 'We’ll contact you within 14 days to tell you whether the claimant’s request for judgment has been successful.',
-      { claimantName : claim.claimData.claimant.name,
-      ccjRequestedAt: claim.countyCourtJudgmentRequestedAt | date }) }}
+    <a href="{{ DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) }}">
+      {{ t('Contact {{ claimantName }}', { claimantName: claim.claimData.claimant.name }) }}</a>
+    {{ t(' if you need their payment details. Make sure you get receipts for any payments.') }}
   </p>
-  <p>
-    {{ t('You can no longer respond to the claim.') }}
-  </p>
-  <p>
-    {{ externalLink(t('Find out more about County Court Judgments'), 'https://www.gov.uk/county-court-judgments-ccj-for-debt') }}
-  </p>
+
+  <h2 class="heading-small">{{ t('Tell us you’ve paid') }}</h2>
+  <p>{{ t('If you repay the debt, you need to sign in to your account to tell us you’ve paid.') }}</p>
+  <p>{{ t('If you paid within 28 days the claim will be cancelled and you’ll be removed from the CCJ register. '
+    + 'If you pay after 28 days your name will stay on the register but any credit agency that checks it will see you’ve paid.') }}</p>
+
+  <h2 class="heading-small">{{ t('How to prove you’ve paid') }}</h2>
+  <p>{{ t('You can use this service to get a certificate which proves a CCJ is cancelled or that you’ve paid – this costs £15.') }}</p>
+
+  <h2 class="heading-small">{{ t('View the judgment') }}</h2>
+  <p><a href="{{ ClaimantResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('View judgment') }}</a> (PDF)</p>
 {% endmacro %}
