Removed a duplicated word (reject)

--- a/src/main/features/response/views/confirmation/part-admission-steps.njk
+++ b/src/main/features/response/views/confirmation/part-admission-steps.njk
@@ -82,7 +82,7 @@
 
   <p>{{ t('The court will review the case for the full amount of {{ fullAmount }}.', { fullAmount: fullAmount }) }}</p>
 
-  <h3 class="bold">{{ t('If {{ claimantName }} rejects rejects your offer to pay in instalments', { claimantName: claimantName }) }}</h3>
+  <h3 class="bold">{{ t('If {{ claimantName }} rejects your offer to pay in instalments', { claimantName: claimantName }) }}</h3>
 
   <p>{{ t('The court will decide how you must pay.') }}</p>
 
