--- a/src/main/views/macro/statementOfTruth.njk
+++ b/src/main/views/macro/statementOfTruth.njk
@@ -41,7 +41,7 @@ macro statementOfTruth(
     </details>
 
     {{ textInput(t('Full name'), 'signerName', form, inputClass = 'form-control-1-2') }}
-    {{ textInput(t('Role'), 'signerRole', form, inputClass = 'form-control-1-2') }}
+    {{ textInput(t('Job title'), 'signerRole', form, inputClass = 'form-control-1-2') }}
   {% endif %}
 
   {{
