--- a/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/ccjRequested.njk
@@ -22,29 +22,31 @@
 {% endmacro %}
 
 {% macro ccjRequestedForDefendantClaimDetails(claim) %}
-  <h2 class="heading-small">{{ t('{{ claimantName }} has requested a County Court Judgment against you',
-      { claimantName: claim.claimData.claimant.name }) }}</h2>
-  <p>
-    {{ t('{{ claimantName }} accepted your repayment plan but requested a CCJ against you.',
-      { claimantName: claim.claimData.claimant.name }) }}
-  </p>
+  <h2 class="heading-small">{{ t('A County Court Judgment (CCJ) has been issued against you') }}</h2>
+
+  <p>{{ t('{{ claimantName }} accepted your repayment plan and requested a CCJ against you.',
+      { claimantName: claim.claimData.claimant.name }) }}</p>
+
   <p>{{ t('If a defendant doesn’t pay immediately, claimants can request a CCJ even if they accept a repayment plan.') }}</p>
 
-  <h2 class="heading-small">{{ t('How to pay') }}</h2>
   <p>
-    <a href="{{ DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) }}">
-      {{ t('Contact {{ claimantName }}', { claimantName: claim.claimData.claimant.name }) }}</a>
-    {{ t(' if you need their payment details. Make sure you get receipts for any payments.') }}
+    <a href="{{ DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) }}">{{
+      t('Contact {{ claimantName }}', { claimantName: claim.claimData.claimant.name }) }}</a>{{
+      t(' if you need their payment details. Make sure you get receipts for any payments.')
+    }}
   </p>
 
-  <h2 class="heading-small">{{ t('Tell us you’ve paid') }}</h2>
-  <p>{{ t('If you repay the debt, you need to sign in to your account to tell us you’ve paid.') }}</p>
-  <p>{{ t('If you paid within 28 days the claim will be cancelled and you’ll be removed from the CCJ register. '
-    + 'If you pay after 28 days your name will stay on the register but any credit agency that checks it will see you’ve paid.') }}</p>
+  <p>{{ t('The judgment sets out the terms of how you must pay.') }}</p>
 
-  <h2 class="heading-small">{{ t('How to prove you’ve paid') }}</h2>
-  <p>{{ t('You can use this service to get a certificate which proves a CCJ is cancelled or that you’ve paid – this costs £15.') }}</p>
+  <p><a
+      href="{{ ClaimantResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('View the judgment') }}</a> {{ t(' (PDF)') }}
+  </p>
 
-  <h2 class="heading-small">{{ t('View the judgment') }}</h2>
-  <p><a href="{{ ClaimantResponsePaths.receiptReceiver.evaluateUri({ externalId: claim.externalId }) }}">{{ t('View judgment') }}</a> (PDF)</p>
+  <p>{{
+    t('If you repay the debt within 28 days you can ')
+  }}<a href="https://hmctsformfinder.justice.gov.uk/HMCTS/GetForm.do?court_forms_id=1157">{{
+    t('apply for a certificate of cancellation')
+  }}</a>{{
+    t(' to cancel the CCJ. This application costs £15.')
+  }}</p>
 {% endmacro %}
