--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -29,6 +29,9 @@
           frequency: frequency,
           startDate: claim.response.paymentIntention.repaymentPlan.firstPaymentDate | date }) }}
     </p>
+    <p>
+      {{ t('The claimant can’t request a County Court Judgment against you if you pay as agreed.') }}
+    </p>
   {% endif %}
   <p>
     {{ _downloadAgreementLink(claim) }}
