--- a/src/main/features/claimant-response/views/part-payment-received.njk
+++ b/src/main/features/claimant-response/views/part-payment-received.njk
@@ -8,8 +8,8 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <form method="post" class="analytics-submit-event-trigger"
-            data-event-action=""
-            data-event-label-from="option"
+            data-event-action="Claimant Response: Has defendant paid less than claim amount"
+            data-event-label-from="received"
             novalidate>
         {{ csrfProtection(csrf) }}
 
