--- a/src/main/features/claimant-response/views/settle-claim.njk
+++ b/src/main/features/claimant-response/views/settle-claim.njk
@@ -12,8 +12,8 @@
   <div class="grid-row">
     <div class="column-two-thirds">
       <form method="post" class="analytics-submit-event-trigger"
-            data-event-action=""
-            data-event-label-from="option"
+            data-event-action="Claimant Response: Settle claim for paid amount"
+            data-event-label-from="accepted"
             novalidate>
         {{ csrfProtection(csrf) }}
 
