--- a/src/main/features/response/views/confirmation/full-defence-steps.njk
+++ b/src/main/features/response/views/confirmation/full-defence-steps.njk
@@ -8,7 +8,9 @@
 <h2 class="heading-small">{{ t('If you chose not to try mediation') }}</h2>
 <p>{{ t('We’ll contact you to tell you what to do.') }}</p>
 
-<h2 class="heading-medium">{{ t('Settle out of court') }}</h2>
-<p>{{ t('You can still <a href="{{ link }}">settle the claim out of court</a>. For example you could offer to repair goods you sold the claimant or suggest a payment.',
-    { link: OfferPaths.settleOutOfCourtPage.evaluateUri({ externalId: claim.externalId }) }) | safe }}</p>
-<p>{{ t('You can avoid getting a County Court Judgment if the claimant accepts your offer.') }}</p>
+{% if claim.response.defenceType !== DefenceType.ALREADY_PAID %}
+  <h2 class="heading-medium">{{ t('Settle out of court') }}</h2>
+  <p>{{ t('You can still <a href="{{ link }}">settle the claim out of court</a>. For example you could offer to repair goods you sold the claimant or suggest a payment.',
+      { link: OfferPaths.settleOutOfCourtPage.evaluateUri({ externalId: claim.externalId }) }) | safe }}</p>
+  <p>{{ t('You can avoid getting a County Court Judgment if the claimant accepts your offer.') }}</p>
+{% endif %}
