--- a/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
+++ b/src/main/features/dashboard/views/macro/claimStatus/offerSettlement.njk
@@ -17,8 +17,34 @@
 {% macro offerSettlementReachedForDefendant(claim) %}
   {% if claim.settlement.isThroughAdmissions() %}
     {% set claimantName = claim.claimData.claimant.name %}
+    {% set paymentIntention = claim.settlement.getLastOffer().paymentIntention %}
     {% set claimantDetailsPageURI = DashboardPaths.contactThemPage.evaluateUri({ externalId: claim.externalId }) %}
+
     <h2 class="heading-small">{{ t('You’ve both signed a settlement agreement') }}</h2>
+
+    {% set amountToPay = 'the full amount' %}
+    {% if claim.response.responseType === ResponseType.PART_ADMISSION.value %}
+      {% set amountToPay = claim.response.amount | numeral %}
+    {% endif %}
+
+    {% if paymentIntention.paymentOption === domain.PaymentOption.BY_SPECIFIED_DATE %}
+      <p>{{ t('The agreement says you’ll repay the {{ amount }} by {{ paymentDate}}.',
+          { amount: amountToPay,
+            paymentDate: claim.settlement.getLastOffer().paymentIntention.paymentDate | date
+          }
+        )
+        }}</p>
+    {% elseif paymentIntention.paymentOption === domain.PaymentOption.INSTALMENTS and paymentIntention.repaymentPlan is defined %}
+      {{
+        t('The agreement says you’ll repay {{ instalmentAmount }} {{ paymentSchedule }} starting {{ firstPaymentDate }}.',
+          {
+            instalmentAmount: paymentIntention.repaymentPlan.instalmentAmount | numeral,
+            paymentSchedule: paymentIntention.repaymentPlan.paymentSchedule | renderPaymentSchedule |lower,
+            firstPaymentDate: paymentIntention.repaymentPlan.firstPaymentDate | date
+          }
+        )
+      }}
+    {% endif %}
 
     <p>
       {{ t('The claimant can’t request a County Court Judgment against you if you pay by the agreed date.') }}
